Provider get by id swagger
