# storage/api-docs/api-docs.json
@@ -318,6 +318,38 @@
                     }
                 }
             }
+        },
+        "/api/providers/{id}": {
+            "get": {
+                "tags": [
+                    "Providers"
+                ],
+                "summary": "Get Providers by ID",
+                "description": "Gets a provider by ID",
+                "operationId": "35b1e0194318551d5d5794e6f71ff577",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "provider id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     }
 }
